Spacing issue for nav menu

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -997,6 +997,7 @@ blockquote.verse cite {
     
     .nav-menu {
         padding: 0;
+        margin: 0;
         flex: none;
         list-style: none;
         position: relative;
